testing/Travis/testcases/prototype/shouldSucceed/try16.adl
CONTEXT Test IN ENGLISH

PATTERN Test16
RELATION r[X*Y]
RELATION s[X*Y]
RULE I;r
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script tests type checking wrt I.
   Result: PASS
   Reason: the type on ; is inferred as I[X]
-}