testing/Travis/testcases/prototype/shouldFail/try4.adl
CONTEXT Test IN ENGLISH

PATTERN Test4
RELATION r[X*Y]
RELATION s[X*A]
RELATION t[B*Y]
CLASSIFY B ISA E
CLASSIFY A ISA E
CLASSIFY D ISA B
CLASSIFY D ISA A
RULE r = s;t
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script demonstrates how NOT to specify an intersection type between A and B.
   Result: FAIL
   Reason: the intersection between A and B exists as concept D
-}